--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 class="background-video"
                 playsinline
             >
-                <source src="https://assets.mixkit.co/videos/preview/mixkit-planet-earth-in-space-3445-large.mp4" type="video/mp4">
+                <source src="content/video/Solar-System.mp4" type="video/mp4">
                 Ваш браузер не поддерживает видео.
             </video>
             <div class="video-overlay"></div>
