--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a href="#" class="nav-link active">Главная</a></li>
-                        <li><a href="#planets" class="nav-link">Планеты</a></li>
+                       <li><a href="planets.html" class="nav-link">Планеты</a></li>
                         <li><a href="#missions" class="nav-link">Миссии</a></li>
                         <li><a href="#gallery" class="nav-link">Галерея</a></li>
                         
