--- a/index.html
+++ b/index.html
@@ -338,11 +338,10 @@
                         <span class="control-icon">🌍</span>
                         <span>Впечатляющие изображения</span>
                     </div>
-                    <button class="view-gallery-btn" id="viewGalleryBtn">
+                    <button class="view-gallery-btn" id="viewGalleryBtn" onclick="window.location.href='gallery.html'">
                         <span class="btn-icon">📷</span>
                         Смотреть всю галерею
                     </button>
-                </div>
             </div>
         </section>
 
@@ -486,13 +485,6 @@
         </div>
     </div>
 </section>
-
-
-
-
-
-
-
 
     </div>
 
