--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <ul class="nav-list">
                         <li><a href="#" class="nav-link active">Главная</a></li>
                        <li><a href="planets.html" class="nav-link">Планеты</a></li>
-                        <li><a href="#missions" class="nav-link">Миссии</a></li>
+                        <li><a href="missions.html" class="nav-link">Миссии</a></li>
                         <li><a href="#gallery" class="nav-link">Галерея</a></li>
                         
                         <!-- Выпадающее меню -->
@@ -500,8 +500,8 @@
                 <h4>Разделы</h4>
                 <ul>
                     <li><a href="#">Главная</a></li>
-                    <li><a href="#planets">Планеты</a></li>
-                    <li><a href="#missions">Космические миссии</a></li>
+                    <li><a href="planets.html">Планеты</a></li>
+                    <li><a href="missions.html">Космические миссии</a></li>
                     <li><a href="#gallery">Галерея</a></li>
                 </ul>
             </div>
