--- a/planets.html
+++ b/planets.html
@@ -24,7 +24,7 @@
                     <ul class="nav-list">
                         <li><a href="index.html" class="nav-link">Главная</a></li>
                         <li><a href="planets.html" class="nav-link active">Планеты</a></li>
-                        <li><a href="index.html#missions" class="nav-link">Миссии</a></li>
+                       <li><a href="missions.html" class="nav-link">Миссии</a></li>
                         <li><a href="index.html#gallery" class="nav-link">Галерея</a></li>
                         
                         <!-- Выпадающее меню -->
@@ -176,7 +176,7 @@
                     <ul>
                         <li><a href="index.html">Главная</a></li>
                         <li><a href="planets.html">Планеты</a></li>
-                        <li><a href="index.html#missions">Космические миссии</a></li>
+                        <li><a href="missions.html">Космические миссии</a></li>
                         <li><a href="index.html#gallery">Галерея</a></li>
                     </ul>
                 </div>
