--- a/planets.html
+++ b/planets.html
@@ -178,7 +178,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Космический исследователь. Все права защищены.</p>
+                <p> Космический исследователь</p>
             </div>
         </div>
     </footer>
@@ -189,4 +189,5 @@
     <script src="feedbackForm.js"></script>
     <script src="planets.js"></script>
 </body>
+
 </html>
