--- a/gallery.html
+++ b/gallery.html
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Космический исследователь. Все права защищены.</p>
+                <p> Космический исследователь</p>
                 <p class="footer-note">Все изображения принадлежат их правообладателям (NASA, ESA и др.)</p>
             </div>
         </div>
@@ -233,4 +233,5 @@
     <script src="navigation.js"></script>
     <script src="gallery.js"></script>
 </body>
+
 </html>
