--- a/missions.html
+++ b/missions.html
@@ -188,7 +188,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Космический исследователь. Все права защищены.</p>
+                <p> Космический исследователь</p>
                 <p class="footer-note">Данные о миссиях основаны на информации NASA, ESA и других космических агентств</p>
             </div>
         </div>
@@ -199,4 +199,5 @@
     <script src="navigation.js"></script>
     <script src="missions.js"></script>
 </body>
+
 </html>
