--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Космический исследователь. Все права защищены.</p>
+            <p> Космический исследователь</p>
         </div>
     </div>
 </footer>
@@ -595,4 +595,5 @@
     <script src="weight-calculator.js"></script>
    <script src="solar-model.js"></script>
 </body>
+
 </html>
